Initial implementation of profiles

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,14 @@ dependencies:
   cached_network_image: ^0.5.1
 
   ## Tools
+  firebase_auth: ^0.8.1+4
+  firebase_database: ^2.0.2
+  google_sign_in: ^4.0.1+1
   intl: ^0.15.7
   package_info: ^0.4.0+1
   scoped_model: ^1.0.1
   share: ^0.6.0+1
+  shared_preferences: ^0.4.0
 
 flutter:
   fonts:
